--- a/qr-code-component-main/code/style.css
+++ b/qr-code-component-main/code/style.css
@@ -6,15 +6,58 @@
 }
 body {
     background-color: #D5E1EF;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
 
 .main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
     margin:0px auto;
-    max-width: 288px;
+    background-color: white;
+    max-width: 320px;
+    border-radius: 15px;
+    padding: 20px;
+    box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+}
+h1, p{
+    max-width: 270px;
+    margin: 0 auto;
+    text-align: center;
+    padding: 10px;
+    line-height: 1.5;
+}
+h1{
+    font-size: 18px;
+}
+p{
+    font-size: 14px;
+    color: grey;
 }
 
 img {
-    border-radius: 10px;
+    border-radius: 8px;
     max-width: 288px;
+}
+footer{
+    position: absolute;
+    bottom: 2%;
+    left: 50%;
+    transform: translate(-50%);
+    font-size: 0.9rem;
+    color: grey;
+    text-align: center;
+}
+@media (max-width: 760px){
+    .main{
+        margin-top: 50px;
+    }
+    footer{
+        font-size: 0.8rem;
+    }
 }
