--- a/qr-code-component-main/code/style.css
+++ b/qr-code-component-main/code/style.css
@@ -33,7 +33,8 @@ h1, p{
     line-height: 1.5;
 }
 h1{
-    font-size: 18px;
+    font-size: 17px;
+    font-weight: 900;
 }
 p{
     font-size: 14px;
